# sombrero

./: .clang-format  .config  .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  Kconfig  Makefile.am  README.md  autogen.sh  config.h.in  configure.ac  enhance_doxygen_parser.py  libsombrero.pc  libsombrero.pc.in  test_reconstruct.py  test_reconstruct_diff.py  test_script.sh  test_wrapper.py
.agents/workflows/: add_feature.md
.github/workflows/: ci.yml
cmake/: kconfig.cmake
doc/: CMakeLists.txt  Makefile.am  doxyfile
examples/: CMakeLists.txt  Makefile.am  README.md  atrous.c  bmp.c  bmp.h  debug.h  fits.c  fits.h  objects.c  reconstruct-1d.c  reconstruct.c  smbrr-reconstruct  smbrr-reconstruct-1d  structures.c  usb_camera_objects.py  usb_camera_reconstruct.py  usb_camera_sigall.py
examples/images/: ngc7380.fit  skv1427378808925.fits  skv2320143407510.fits
include/: CMakeLists.txt  Makefile.am  cl_ctx.h  local.h  mask.h  ops.h  sombrero.h  sombrero.h.patch
python/: README.md  pyproject.toml  sombrero.py
python/examples/: README.md  object_viewer.py  test_scroll.py
python/sombrero.egg-info/: PKG-INFO  SOURCES.txt
src/: CMakeLists.txt  Makefile.am  README.md  cl_ctx.c  convolution.c  convolution_1d.c  convolution_1d_ops.c  convolution_2d.c  convolution_2d_ops.c  convolution_ops_opencl.c  cpu.c  data_ops.c  data_ops_opencl.c  image.c  image_ops.c  kernels.h  noise.c  object.c  process.c  reconstruct.c  signal.c  signal_ops.c  wavelet.c  wavelet_1d.c  wavelet_2d.c
tests/: CMakeLists.txt  README.md  run_tests.sh  test_atrous.c  test_detection_equivalence.py  test_image_equivalence.c  test_objects.c  test_packages.sh  test_performance.c  test_reconstruct.c  test_reconstruct.py  test_reconstruct_diff.py  test_reconstruct_float.py  test_structures.c
