[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sombrero"
version = "0.1.0"
description = "Python ctypes wrapper for libsmbrr (Sombrero)"
authors = [
  { name="Liam Girdwood", email="lgirdwood@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)",
    "Operating System :: POSIX :: Linux",
]

[tool.setuptools]
py-modules = ["sombrero"]
